# OpenNOW-Switch

./: .gitignore  CMakeLists.txt  README.md
cmake/: ValidateNro.cmake  ValidateNroSelfTest.cmake  ValidateSwitchEnvironment.cmake
docs/: IMPLEMENTATION_STATUS.md  NATIVE_WEBRTC_STACK.md
include/opennow/app/: OpenNowSwitchApp.hpp
include/opennow/core/: Log.hpp  Settings.hpp
include/opennow/gfn/: Auth.hpp  AuthService.hpp  AuthSessionStore.hpp  Catalog.hpp  CloudMatch.hpp  GfnService.hpp  GfnTypes.hpp  InputEncoder.hpp  OAuthCallbackServer.hpp  Sdp.hpp  SignalingClient.hpp
include/opennow/input/: ControllerMapper.hpp
include/opennow/media/: GfnWebRtcClient.hpp  NativeMediaPipeline.hpp  VideoFrameStore.hpp
include/opennow/net/: CurlHttpClient.hpp  HttpClient.hpp  WssClient.hpp
include/opennow/platform/: Platform.hpp
include/opennow/ui/: BorealisApp.hpp  CustomUiApp.hpp  Dashboard.hpp  SwitchSafeApp.hpp
include/opennow/util/: Json.hpp
src/: main.cpp
src/app/: OpenNowSwitchApp.cpp
src/core/: Log.cpp  Settings.cpp
src/gfn/: Auth.cpp  AuthService.cpp  AuthSessionStore.cpp  Catalog.cpp  CloudMatch.cpp  GfnService.cpp  InputEncoder.cpp  OAuthCallbackServer.cpp  Sdp.cpp  SignalingClient.cpp
src/input/: ControllerMapper.cpp
src/media/: GfnWebRtcClient.cpp  NativeMediaPipeline.cpp  VideoFrameStore.cpp
src/net/: CurlHttpClient.cpp  MbedtlsTimingShim.cpp  MockHttpClient.cpp  WssClient.cpp
src/platform/: MockPlatform.cpp  MockPlatform.hpp  SwitchPlatform.cpp  SwitchPlatform.hpp
src/ui/: BorealisApp.cpp  CustomUiApp.cpp  Dashboard.cpp  SwitchSafeApp.cpp
src/util/: Json.cpp
tests/: AuthTests.cpp  CloudMatchTests.cpp  ControllerMapperTests.cpp  DashboardTests.cpp  InputEncoderTests.cpp  JsonTests.cpp  LogTests.cpp  SdpTests.cpp
